# -Agent

./: .env  README.md  pyproject.toml
backend/: config.py  main.py
backend/agents/: api_routes.py
backend/rag/: api_routes.py  retriever.py  vector_store.py
data/chroma_db/: chroma.sqlite3
data/knowledge_base/processed/: 337defc1fc71dbcb.json  d093673496f0a965.json
data/knowledge_base/raw/: 337defc1fc71dbcb.json  d093673496f0a965.json
frontend/src/components/: ChatBox.tsx
frontend/src/hooks/: useWebSocket.ts
